	EXTERNAL_TRIGGERS.
	(PHONIES): Adjust.
	* Makecheck: Depend on `external-triggers' in installed tests:
	include internal testsuite in other tests.

	test/triggers/Build: Add rpath to victim processes.

	* libproc/Psymtab.c (Pxlookup_by_name_internal): Do not look at
	executable mappings if mappings cannot be determined.
	(Pobject_iter): Likewise.

2013-04-25  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Log skips in the summary file.

2013-04-10  Nick Alcock  <nick.alcock@oracle.com>

	* test/triggers/.gitignore: Do not ignore *.h.
	* test/triggers/libproc-lookup*.[ch]: New test of name lookup.

	* test/utils/Build: Look for headers in the right place.  Link
	against libdtrace.so only.

2013-04-09  Nick Alcock	 <nick.alcock@oracle.com>

	* libproc/Pcontrol.c (Ptrace): Do not trigger a SIGSTOP if we are
	already in SIGSTOPped state.

	Symbol lookup scope support in rtld_db.

	* include/i386/platform.h (DT_THISPROCNUM): Define.
	* include/rtld_db.h (rd_loadobj_t.rl_scope). New, pointers to
	search scopes in victim.
	(rd_loadobj_t.rl_nscopes): New, number of scopes.
	(rd_loadobj_t.rl_default_scope): New, 1 if this scope is a
	clone of the lmid's default.
	(rd_loadobj_t.rl_nscopes_alloced): New, number of scopes allocated
	in rl_nscopes (some of which may be unused or stale).
	(rd_get_scope): New prototype.

	* include/sys/glibc_internal_link.h (r_scope_elem): New, a search
	scope element in the dynamic linker.
	(internal_link_map): New, the glibc link map structure with
	private elements up to l_searchlist.
	* libproc/mkoffsets.sh: Add internal_link_map (header only, no
	offset array support since that is not useful for things which
	are only defined in glibc_internal_link.h).
	* libproc/rtld_db.c (link_map): Rename to...
	(first_link_map): ... this better name.
	(rd_get_link_map): New, get a link map given an
	address. Refactored from...
	(rd_loadobj_iter): ... here.
	(rd_get_loadobj_link_map): New, populate loadobj given link map